--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,8 @@ jobs:
         shell: powershell
         run: |
           & minikube -p minikube docker-env --shell powershell | Invoke-Expression
+          $env:PATH  # Debug: Check if Docker is in PATH
+          docker --version  # Debug: Verify Docker is accessible
 
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
