--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,11 +17,20 @@ jobs:
         shell: powershell
         run: |
           & minikube -p minikube docker-env --shell powershell | Invoke-Expression
-          $env:PATH  # Debug: Check if Docker is in PATH
-          docker --version  # Debug: Verify Docker is accessible
+          Write-Output "Docker environment set up"
+
+      - name: Debug Environment
+        shell: powershell
+        run: |
+          Write-Output "Username: ${{ secrets.DOCKER_USERNAME }}"
+          Write-Output "Password set: [REDACTED]"  # Avoid logging the actual password
+          docker --version
 
       - name: Login to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        shell: powershell
+        run: |
+          Write-Output "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+          if ($LASTEXITCODE -ne 0) { throw "Docker login failed" }
 
       - name: Build and Push Frontend Docker Image
         run: |
