--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,11 +25,23 @@ jobs:
           docker --version
           docker info --format '{{.ServerVersion}}'
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Debug Secrets
+        shell: powershell
+        run: |
+          $username = "${{ secrets.DOCKER_USERNAME }}"
+          $password = "${{ secrets.DOCKER_PASSWORD }}"
+          Write-Output "Resolved Username: $username"
+          Write-Output "Password set: [REDACTED]"
+          if ([string]::IsNullOrEmpty($username) -or [string]::IsNullOrEmpty($password)) {
+            throw "One or more secrets are empty or not set"
+          }
+          Write-Output "Secrets are set correctly"
+
+      - name: Login to Docker Hub
+        shell: powershell
+        run: |
+          Write-Output "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+          if ($LASTEXITCODE -ne 0) { throw "Docker login failed" }
 
       - name: Build and Push Frontend Docker Image
         run: |
