--- a/app/frontend/Dockerfile
+++ b/app/frontend/Dockerfile
@@ -1,28 +1,22 @@
-# Stage 1: Build the React app
-FROM node:18 AS builder
+# Use Node to build the app
+FROM node:18 AS build
 
-# Set working directory
-WORKDIR /app/frontend
+WORKDIR /app
 
-# Copy correct path from the context root
-COPY app/frontend/package*.json ./
-
+COPY package*.json ./
 RUN npm install
 
-# Then copy rest of the code
-COPY app/frontend/. ./
-
-# Build the React app for production
+COPY . .
 RUN npm run build
 
-# Stage 2: Serve with Nginx
+# Use nginx to serve the built static files
 FROM nginx:alpine
-COPY --from=builder /app/frontend/dist /usr/share/nginx/html
 
+COPY --from=build /app/dist /usr/share/nginx/html
 
+# Copy our custom nginx.conf
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Expose port 80 for the frontend
 EXPOSE 80
 
-# Start Nginx
 CMD ["nginx", "-g", "daemon off;"]
