--- a/app/frontend/nginx.conf
+++ b/app/frontend/nginx.conf
@@ -18,7 +18,7 @@ server {
 
     # Proxy API calls to your backend
     location /api/ {
-        proxy_pass http://backend-service.event-verse.svc.cluster.local:5000;
+        proxy_pass http://event-verse-backend-service.event-verse.svc.cluster.local:5000;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
